--- a/Proiect/ListEntryPage.xaml
+++ b/Proiect/ListEntryPage.xaml
@@ -2,18 +2,35 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Proiect.ListEntryPage">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add Shopping List"
- Clicked="OnShopListAddedClicked" />
+    <ContentPage.ToolbarItems >
+
+
+
+        <ToolbarItem Text="Magazine" Clicked="OnMagazineClicked" />
+
+
+        <ToolbarItem Text="Adauga un nou magazin in lista" Clicked="OnShopListAddedClicked" />
+
+
+        
+
     </ContentPage.ToolbarItems>
-    <ListView x:Name="listView"
- Margin="20"
- ItemSelected="OnListViewItemSelected">
+
+
+
+
+
+
+    <ListView x:Name="listView" Margin="20" ItemSelected="OnListViewItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <TextCell Text="{Binding Description}"
- Detail="{Binding Date}" />
+                <TextCell Text="{Binding Description}" Detail="{Binding Date}" />
             </DataTemplate>
         </ListView.ItemTemplate>
+   
+        
     </ListView>
+    
+    
+    
 </ContentPage>
